# buffer

./: CMakeLists.txt
include/: wren_buffer.h  wrt_plugin.h
src/: buffer.c
wren/: buffer.spec.wren  buffer.wren
